--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -10,16 +10,16 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
-    <PackageReference Include="Microsoft.ServiceFabric" Version="5.5.216" />
-    <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="2.6.210" />
-    <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.WebListener" Version="2.5.216" />
-    <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.5.216" />
-    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.5.216" />
-    <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="2.5.216" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
+    <PackageReference Include="Microsoft.ServiceFabric" Version="6.0.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="2.8.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.Kestrel" Version="2.8.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.8.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.8.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="2.8.232" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
